@@ -1,3 +1,7 @@
+2012-02-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-save-fprop-on-kill): ignore errors.
+
 2012-02-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-get-vprop): use the directory of the
